- Fixed the date error, please update the conf files, and added new conf settings.

--- a/src/realmd/realmd.conf.dist.in
+++ b/src/realmd/realmd.conf.dist.in
@@ -1,7 +1,7 @@
 ############################################
 # MaNGOS realmd configuration file         #
 ############################################
-ConfVersion=240220090920
+ConfVersion=2009030202
 
 ###################################################################################################################
 # REALMD SETTINGS
