--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1,7 +1,7 @@
 #####################################
 # MaNGOS Configuration file         #
 #####################################
-ConfVersion=240220090918
+ConfVersion=2009030201
 
 ###################################################################################################################
 # CONNECTIONS AND DIRECTORIES
@@ -537,6 +537,11 @@ LogColors = "13 7 11 9"
 #        Default: 0 - no skilups
 #                 1 - skilups possible
 #
+#    OffhandCheckAtTalentsReset
+#        Talent reset can change offhand weapon restrictions for equip slots.
+#        Default: 0 - recheck offhand slot weapon only at zone update
+#                 1 - recheck offhand slot weapon at talent reset also
+#
 #    Event.Announce
 #        Default: 0 (false)
 #                 1 (true)
@@ -590,6 +595,7 @@ MaxGroupXPDistance = 74
 MailDeliveryDelay = 3600
 SkillChance.Prospecting = 0
 SkillChance.Milling = 0
+OffhandCheckAtTalentsReset = 0
 Event.Announce = 0
 BeepAtStart = 1
 Motd = "Willkommen auf Projekt Fanatix Server Test"
