- *fixed unix* compile

--- a/src/game/Makefile.am
+++ b/src/game/Makefile.am
@@ -169,8 +169,6 @@ libmangosgame_a_SOURCES = \
 	MapManager.h \
 	MapReference.h \
 	MapRefManager.h \
-	MapUpdater.cpp \
-	MapUpdater.h \
 	MiscHandler.cpp \
 	MotionMaster.cpp \
 	MotionMaster.h \
@@ -304,7 +302,9 @@ libmangosgame_a_SOURCES = \
 	FollowerRefManager.h \
 	GroupReference.cpp \
 	GroupReference.h \
-	GroupRefManager.h
+	GroupRefManager.h \
+	MapUpdater.cpp \
+	MapUpdater.h
 
 ## Link against shared library
 libmangosgame_a_LIBADD = ../shared/libmangosshared.a ../shared/Auth/libmangosauth.a ../shared/Config/libmangosconfig.a ../shared/Database/libmangosdatabase.a ../shared/vmap/libmangosvmaps.a
