--- a/sql/updates/Makefile.am
+++ b/sql/updates/Makefile.am
@@ -191,6 +191,8 @@ pkgdata_DATA = \
 	7369_01_mangos_quest_template.sql \
 	7376_01_mangos_spell_area.sql \
 	7382_01_mangos_creature_template.sql \
+	7388_01_mangos_mangos_string.sql \
+	7390_01_mangos_areatrigger_teleport.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -362,4 +364,6 @@ EXTRA_DIST = \
 	7369_01_mangos_quest_template.sql \
 	7376_01_mangos_spell_area.sql \
 	7382_01_mangos_creature_template.sql \
+	7388_01_mangos_mangos_string.sql \
+	7390_01_mangos_areatrigger_teleport.sql \
 	README
