--- a/src/game/Makefile.am
+++ b/src/game/Makefile.am
@@ -302,9 +302,7 @@ libmangosgame_a_SOURCES = \
 	FollowerRefManager.h \
 	GroupReference.cpp \
 	GroupReference.h \
-	GroupRefManager.h \
-	MapUpdater.cpp \
-	MapUpdater.h
+	GroupRefManager.h
 
 ## Link against shared library
 libmangosgame_a_LIBADD = ../shared/libmangosshared.a ../shared/Auth/libmangosauth.a ../shared/Config/libmangosconfig.a ../shared/Database/libmangosdatabase.a ../shared/vmap/libmangosvmaps.a
