--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -492,7 +492,7 @@
 					>
 				</File>
 				<File
-					RelativePath="..\scripts\custom\teleguy.cpp"
+					RelativePath="..\scripts\custom\telefratz.cpp"
 					>
 				</File>
 			</Filter>
