- Implemented Support to copy conf files to Bin Folder for mangosd, for realmd comes later

--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -2882,15 +2882,15 @@
 			>
 		</File>
 		<File
+			RelativePath="..\revision.h"
+			>
+		</File>
+		<File
 			RelativePath="..\ScriptMgr.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\ScriptMgr.h"
-			>
-		</File>
-		<File
-			RelativePath="..\svn_revision.h"
 			>
 		</File>
 		<File
