--- a/win/VC90/mangosd.vcproj
+++ b/win/VC90/mangosd.vcproj
@@ -115,7 +115,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist&#x0D;&#x0A;"
+				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist.in ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist.in&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -215,7 +215,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist&#x0D;&#x0A;"
+				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist.in ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist.in&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -313,7 +313,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist&#x0D;&#x0A;"
+				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist.in ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist.in&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -411,7 +411,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist&#x0D;&#x0A;"
+				CommandLine="copy ..\..\dep\lib\$(PlatformName)_$(ConfigurationName)\*.dll ..\..\bin\$(PlatformName)_$(ConfigurationName)&#x0D;&#x0A;copy ..\..\src\mangosd\mangosd.conf.dist.in ..\..\bin\$(PlatformName)_$(ConfigurationName)\mangosd.conf.dist.in&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
