- Added new Version of Serverwide Event, works fine

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -323,6 +323,7 @@ scripts/zone/obsidian_sanctum/instance_obsidian_sanctum.cpp \
 scripts/zone/onyxias_lair/boss_onyxia.cpp \
 scripts/zone/orgrimmar/orgrimmar.cpp \
 scripts/zone/razorfen_downs/boss_amnennar_the_coldbringer.cpp \
+scripts/zone/razorfen_kraul/razorfen_kraul.cpp \
 scripts/zone/ruins_of_ahnqiraj/boss_ayamiss.cpp \
 scripts/zone/ruins_of_ahnqiraj/boss_buru.cpp \
 scripts/zone/ruins_of_ahnqiraj/boss_kurinnaxx.cpp \
