--- a/src/bindings/ScriptDev2/sql/Updates/Makefile.am
+++ b/src/bindings/ScriptDev2/sql/Updates/Makefile.am
@@ -56,4 +56,12 @@ pkgdata_DATA = \
 	r872_mangos.sql \
 	r883_mangos.sql \
 	r895_mangos.sql \
-	r900_mangos.sql
+	r900_mangos.sql \
+	r903_mangos.sql \
+	r903_scriptdev2_script_texts.sql \
+	r907_mangos.sql \
+	r907_scriptdev2_script_texts.sql \
+	r909_mangos.sql \
+	r910_scriptdev2_script_texts.sql \
+	r912_mangos.sql \
+	r912_scriptdev2_script_texts.sql
