- Added new Utgarde Keep Scripts

--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -2732,7 +2732,7 @@
 						>
 					</File>
 					<File
-						RelativePath="..\scripts\zone\sunwell_plateau\boss_felmist.cpp"
+						RelativePath="..\scripts\zone\sunwell_plateau\boss_felmyst.cpp"
 						>
 					</File>
 					<File
