- Update to Scriptdev2 Revision 924

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -199,6 +199,7 @@ scripts/zone/darkshore/darkshore.cpp \
 scripts/zone/deadmines/deadmines.cpp \
 scripts/zone/deadmines/def_deadmines.h \
 scripts/zone/deadmines/instance_deadmines.cpp \
+scripts/zone/dragonblight/dragonblight.cpp \
 scripts/zone/draktharon_keep/boss_dred.cpp \
 scripts/zone/draktharon_keep/boss_novos.cpp \
 scripts/zone/draktharon_keep/boss_tharon_ja.cpp \
@@ -208,6 +209,7 @@ scripts/zone/draktharon_keep/instance_drak_tharon_keep.cpp \
 scripts/zone/dun_morogh/dun_morogh.cpp \
 scripts/zone/dustwallow_marsh/dustwallow_marsh.cpp \
 scripts/zone/eastern_plaguelands/eastern_plaguelands.cpp \
+scripts/zone/ebon_hold/ebon_hold.cpp \
 scripts/zone/elwynn_forest/elwynn_forest.cpp \
 scripts/zone/eversong_woods/eversong_woods.cpp \
 scripts/zone/felwood/felwood.cpp \
