--- a/src/bindings/ScriptDev2/sql/Updates/Makefile.am
+++ b/src/bindings/ScriptDev2/sql/Updates/Makefile.am
@@ -69,4 +69,8 @@ pkgdata_DATA = \
 	r916_scriptdev2_script_texts.sql \
 	r919_mangos.sql \
 	r922_scriptdev2_script_waypoint.sql \
-	r924_scriptdev2_script_waypoint.sql
+	r924_scriptdev2_script_waypoint.sql \
+	r936_scriptdev2_script_waypoint.sql \
+	r937_mangos.sql \
+	r937_scriptdev2_script_texts.sql \
+	r937_scriptdev2_script_waypoint.sql
