--- a/src/realmd/realmd.conf.dist.in
+++ b/src/realmd/realmd.conf.dist.in
@@ -1,7 +1,7 @@
 ############################################
 # MaNGOS realmd configuration file         #
 ############################################
-ConfVersion=2009030202
+ConfVersion=2007062001
 
 ###################################################################################################################
 # REALMD SETTINGS
@@ -17,7 +17,7 @@ ConfVersion=2009030202
 #    LogsDir
 #         Logs directory setting.
 #         Important: Logs dir must exists, or all logs be disable
-#         Default: "" - no log directory prefix, if used log names isn't absolute path then logs will be 
+#         Default: "" - no log directory prefix, if used log names isn't absolute path then logs will be
 #                       stored in current directory for run program.
 #
 #    MaxPingTime
@@ -78,11 +78,21 @@ ConfVersion=2009030202
 #
 #    RealmsStateUpdateDelay
 #        Realm list Update up delay (updated at realm list request if delay expired).
-#        Default: 20 
+#        Default: 20
 #                 0  (Disabled)
 #
+#    WrongPass.MaxCount
+#        Number of login attemps with wrong password before the account or IP is banned
+#        Default: 0  (Never ban)
 #
-#	
+#    WrongPass.BanTime
+#        Duration of the ban in seconds (0 means permanent ban)
+#        Default: 600
+#
+#    WrongPass.BanType
+#        Ban the IP or account on which login is attempted
+#        Default: 0 (Ban IP)
+#                 1 (Ban Account)
 #
 ###################################################################################################################
 
@@ -101,4 +111,6 @@ LogColors = "13 7 11 9"
 UseProcessors = 0
 ProcessPriority = 1
 RealmsStateUpdateDelay = 20
-
+WrongPass.MaxCount = 0
+WrongPass.BanTime = 600
+WrongPass.BanType = 0
