- Update to 7536 and update so actualy SD2

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -475,6 +475,7 @@ scripts/zone/zulaman/boss_halazzi.cpp \
 scripts/zone/zulaman/boss_hexlord.cpp \
 scripts/zone/zulaman/boss_janalai.cpp \
 scripts/zone/zulaman/boss_nalorakk.cpp \
+scripts/zone/zulaman/boss_malacrass.cpp \
 scripts/zone/zulaman/boss_zuljin.cpp \
 scripts/zone/zulaman/def_zulaman.h \
 scripts/zone/zulaman/instance_zulaman.cpp \
