- fixed conf error

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -531,7 +531,7 @@ EXTRA_DIST = \
 	Scripts/sc_default.cpp \
 	Scripts/sc_defines.cpp \
 	Scripts/sc_defines.h \
-	scriptdev2.conf.dist
+	scriptdev2.conf.dist.in
 
 ## Additional files to install
 sysconf_DATA = \
