- Added ScriptDev2 Revision 961

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -531,11 +531,11 @@ EXTRA_DIST = \
 	Scripts/sc_default.cpp \
 	Scripts/sc_defines.cpp \
 	Scripts/sc_defines.h \
-	scriptdev2.conf.dist.in
+	scriptdev2.conf.dist
 
 ## Additional files to install
 sysconf_DATA = \
-	scriptdev2.conf.dist.in
+	scriptdev2.conf.dist
 
 install-data-hook:
 	@list='$(sysconf_DATA)'; for p in $$list; do \
