--- a/src/mangosd/mangosd.conf.dist.in
+++ b/src/mangosd/mangosd.conf.dist.in
@@ -1229,6 +1229,18 @@ Arena.ArenaSeason.InProgress = 1
 
 
 ###################################################################################################################
+# MULTITHREADED MAPS CONFIG
+#
+#    Map.Threads
+#         Number of threads for maps, recommend 1 thread for 1 CPU.
+#         Default: 1
+#
+###################################################################################################################
+
+Map.Threads = 1
+
+###################################################################################################################
+#
 # NETWORK CONFIG
 #
 #    Network.Threads
