--- a/win/VC90/shared.vcproj
+++ b/win/VC90/shared.vcproj
@@ -766,6 +766,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\src\shared\DelayExecutor.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\src\shared\DelayExecutor.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\src\shared\ServiceWin32.cpp"
 			>
 		</File>
