--- a/win/VC90/game.vcproj
+++ b/win/VC90/game.vcproj
@@ -1467,6 +1467,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\src\game\MapUpdater.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\src\game\MapUpdater.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\src\game\HostilRefManager.cpp"
 				>
 			</File>
