- Fixed compile error

--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -2688,6 +2688,10 @@
 						>
 					</File>
 					<File
+						RelativePath="..\scripts\zone\zulaman\boss_malacrass.cpp"
+						>
+					</File>
+					<File
 						RelativePath="..\scripts\zone\zulaman\boss_nalorakk.cpp"
 						>
 					</File>
