- Scriptdev2 update to 982

--- a/sql/updates/Makefile.am
+++ b/sql/updates/Makefile.am
@@ -211,6 +211,9 @@ pkgdata_DATA = \
 	7560_01_mangos_gameobject_template.sql \
 	7565_01_mangos_mangos_string.sql \
 	7568_01_mangos_spell_proc_event.sql \
+	7615_01_mangos_command.sql \
+	7616_01_mangos_mangos_string.sql \
+	7616_02_mangos_command.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -402,4 +405,7 @@ EXTRA_DIST = \
 	7560_01_mangos_gameobject_template.sql \
 	7565_01_mangos_mangos_string.sql \
 	7568_01_mangos_spell_proc_event.sql \
+	7615_01_mangos_command.sql \
+	7616_01_mangos_mangos_string.sql \
+	7616_02_mangos_command.sql \
 	README
