--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -1651,6 +1651,10 @@
 				<Filter
 					Name="Teldrassil"
 					>
+					<File
+						RelativePath="..\scripts\zone\teldrassil\teldrassil.cpp"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="Temple of Ahn&apos;Qiraj"
