--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -595,6 +595,10 @@
 				<Filter
 					Name="Duskwood"
 					>
+					<File
+						RelativePath="..\scripts\zone\duskwood\duskwood.cpp"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="Dustwallow Marsh"
