--- a/src/bindings/ScriptDev2/sql/Updates/Makefile.am
+++ b/src/bindings/ScriptDev2/sql/Updates/Makefile.am
@@ -104,4 +104,6 @@ pkgdata_DATA = \
 	r982_mangos.sql \
 	r982_scriptdev2_script_texts.sql \
 	r989_mangos.sql \
-	r990_mangos.sql
+	r990_mangos.sql \
+	r991_scriptdev2.sql \
+	r992_mangos.sql
