- Added new warlock fixes

--- a/src/bindings/ScriptDev2/Makefile.am
+++ b/src/bindings/ScriptDev2/Makefile.am
@@ -54,6 +54,7 @@ scripts/custom/npc_wyrmresttempel_taxi.cpp \
 scripts/custom/npc_acherus_taxi.cpp \
 scripts/custom/npc_sickness.cpp \
 scripts/custom/paymaster.cpp \
+scripts/custom/paradox.cpp \
 scripts/custom/telefratz.cpp \
 scripts/go/go_scripts.cpp \
 scripts/guard/guard_ai.cpp \
