--- a/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
+++ b/src/bindings/ScriptDev2/VC90/90ScriptDev2.vcproj
@@ -477,6 +477,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\scripts\custom\paradox.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\scripts\custom\paymaster.cpp"
 					>
 				</File>
